--- a/app/templates/payment/index.html
+++ b/app/templates/payment/index.html
@@ -839,7 +839,7 @@
                 </li>
                 <li class="feature-item">
                     <i class="ph ph-check feature-icon"></i>
-                    <span>Access to basic tools</span>
+                    <span>Access to basic AI Model</span>
                 </li>
             </ul>
         </div>
@@ -872,7 +872,7 @@
                 </li>
                 <li class="feature-item">
                     <i class="ph ph-check feature-icon"></i>
-                    <span>Access to all premium tools</span>
+                    <span>Access to all premium AI Models</span>
                 </li>
                 <li class="feature-item">
                     <i class="ph ph-check feature-icon"></i>
