--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -371,7 +371,7 @@
                         <i class="ph ph-check-circle"></i>
                         <span>Reply Guy</span>
                     </div>
-                    <div class="preview-feature">
+                    <div class="preview-feature" style="display: none;">
                         <i class="ph ph-check-circle"></i>
                         <span>Clip Spaces</span>
                     </div>
