--- a/app/templates/payment/index.html
+++ b/app/templates/payment/index.html
@@ -872,7 +872,7 @@
                 </li>
                 <li class="feature-item">
                     <i class="ph ph-check feature-icon"></i>
-                    <span>Access to all premium AI Models</span>
+                    <span>Access to premium AI Models</span>
                 </li>
                 <li class="feature-item">
                     <i class="ph ph-check feature-icon"></i>
