--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1076,7 +1076,7 @@
                 <a href="{{ url_for('niche.index') }}"
                    class="nav-subitem {% if request.endpoint and 'niche' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
-                    <i class="ph ph-compass"></i>
+                    <i class="ph ph-crosshair"></i>
                     <span>Niche Radar</span>
                 </a>
                 {% endif %}
