--- a/app/templates/teams/dashboard.html
+++ b/app/templates/teams/dashboard.html
@@ -124,6 +124,10 @@
                         <input type="checkbox" id="perm_niche">
                         <label for="perm_niche">Niche Radar</label>
                     </div>
+                    <div class="permission-item">
+                        <input type="checkbox" id="perm_news_tracker">
+                        <label for="perm_news_tracker">News Tracker</label>
+                    </div>
                 </div>
             </div>
 
@@ -526,7 +530,8 @@ function editPermissions(memberId, permissions) {
             features: [
                 { id: 'x_post_editor', label: 'Post Magic' },
                 { id: 'reply_guy', label: 'Reply Guy' },
-                { id: 'niche', label: 'Niche Radar' }
+                { id: 'niche', label: 'Niche Radar' },
+                { id: 'news_tracker', label: 'News Tracker' }
             ]
         },
         {
