--- a/app/templates/news_tracker.html
+++ b/app/templates/news_tracker.html
@@ -34,6 +34,8 @@
                             <i class="ph ph-caret-down dropdown-arrow"></i>
                         </button>
                         <div class="dropdown-menu" id="feedMenu">
+                            <!-- News & Current Affairs -->
+                            <div class="dropdown-header">News & Current Affairs</div>
                             <div class="dropdown-option selected" data-feed="https://feeds.bbci.co.uk/news/rss.xml" data-name="BBC News">
                                 <i class="ph ph-check"></i>
                                 <span>BBC News</span>
@@ -42,13 +44,111 @@
                                 <i class="ph ph-check"></i>
                                 <span>CNN</span>
                             </div>
+                            <div class="dropdown-option" data-feed="http://feeds.reuters.com/Reuters/worldNews" data-name="Reuters World">
+                                <i class="ph ph-check"></i>
+                                <span>Reuters World</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.theguardian.com/world/rss" data-name="The Guardian">
+                                <i class="ph ph-check"></i>
+                                <span>The Guardian</span>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Technology & Startups -->
+                            <div class="dropdown-header">Technology & Startups</div>
                             <div class="dropdown-option" data-feed="https://www.wired.com/feed/rss" data-name="Wired">
                                 <i class="ph ph-check"></i>
                                 <span>Wired</span>
                             </div>
+                            <div class="dropdown-option" data-feed="http://feeds.feedburner.com/TechCrunch/" data-name="TechCrunch">
+                                <i class="ph ph-check"></i>
+                                <span>TechCrunch</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.theverge.com/rss/index.xml" data-name="The Verge">
+                                <i class="ph ph-check"></i>
+                                <span>The Verge</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://news.ycombinator.com/rss" data-name="Hacker News">
+                                <i class="ph ph-check"></i>
+                                <span>Hacker News</span>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Business & Finance -->
+                            <div class="dropdown-header">Business & Finance</div>
                             <div class="dropdown-option" data-feed="https://www.forbes.com/business/feed/" data-name="Forbes Business">
                                 <i class="ph ph-check"></i>
                                 <span>Forbes Business</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.cnbc.com/id/100003114/device/rss/rss.html" data-name="CNBC">
+                                <i class="ph ph-check"></i>
+                                <span>CNBC</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.businessinsider.com/rss" data-name="Business Insider">
+                                <i class="ph ph-check"></i>
+                                <span>Business Insider</span>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Sports -->
+                            <div class="dropdown-header">Sports</div>
+                            <div class="dropdown-option" data-feed="https://www.espn.com/espn/rss/news" data-name="ESPN">
+                                <i class="ph ph-check"></i>
+                                <span>ESPN</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://feeds.bbci.co.uk/sport/rss.xml" data-name="BBC Sport">
+                                <i class="ph ph-check"></i>
+                                <span>BBC Sport</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://theathletic.com/feed/" data-name="The Athletic">
+                                <i class="ph ph-check"></i>
+                                <span>The Athletic</span>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Entertainment -->
+                            <div class="dropdown-header">Entertainment</div>
+                            <div class="dropdown-option" data-feed="https://variety.com/feed/" data-name="Variety">
+                                <i class="ph ph-check"></i>
+                                <span>Variety</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.rollingstone.com/music/music-news/feed/" data-name="Rolling Stone">
+                                <i class="ph ph-check"></i>
+                                <span>Rolling Stone</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://deadline.com/feed/" data-name="Deadline">
+                                <i class="ph ph-check"></i>
+                                <span>Deadline</span>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Gaming -->
+                            <div class="dropdown-header">Gaming</div>
+                            <div class="dropdown-option" data-feed="https://www.polygon.com/feed/pc/" data-name="Polygon">
+                                <i class="ph ph-check"></i>
+                                <span>Polygon</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://feeds.feedburner.com/thatvideogameblog" data-name="That VideoGame Blog">
+                                <i class="ph ph-check"></i>
+                                <span>That VideoGame Blog</span>
+                            </div>
+
+                            <div class="dropdown-divider"></div>
+
+                            <!-- Science -->
+                            <div class="dropdown-header">Science</div>
+                            <div class="dropdown-option" data-feed="https://www.nasa.gov/rss/dyn/breaking_news.rss" data-name="NASA">
+                                <i class="ph ph-check"></i>
+                                <span>NASA Breaking News</span>
+                            </div>
+                            <div class="dropdown-option" data-feed="https://www.scientificamerican.com/feed/" data-name="Scientific American">
+                                <i class="ph ph-check"></i>
+                                <span>Scientific American</span>
                             </div>
                         </div>
                     </div>
